--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite dev",
+    "dev:wrangler": "wrangler dev --port 8787 --local",
     "dev:init": "rw-scripts dev-init",
     "preview": "vite preview",
     "worker:run": "rw-scripts worker-run",
@@ -29,6 +30,7 @@
   "dependencies": {
     "@prisma/adapter-d1": "~6.8.2",
     "@prisma/client": "~6.8.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@react-spring/web": "^10.0.2",
     "@simplewebauthn/browser": "^13.1.0",
     "@simplewebauthn/server": "^13.1.1",
@@ -41,7 +43,8 @@
     "rwsdk": "0.3.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.3.8"
+    "tw-animate-css": "^1.3.8",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.12.3",
