--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ WEBAUTHN_RP_ID=localhost
 AUTH_SECRET_KEY=your-development-secret-key
 # Optional: Enable Turnstile bot protection
 # TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
+
+# AI Gateway configuration
+AI_GATEWAY_TOKEN=your-ai-gateway-token
+AI_GATEWAY_ID=your-gateway-id
+OPENAI_API_KEY=your-openai-api-key
