--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^4.1.7"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.12.3",
