--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "conversa",
-	"account_id": "2e6386d59e393e0eaec7753cb017cdd7",
+	"name": "portupal",
+	"account_id": "ec027944a657240cd4fd5266eb6e62cc",
 	"main": "src/worker.tsx",
 	"compatibility_date": "2025-05-07",
 	"compatibility_flags": [
