--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@redwoodjs/starter-standard",
+  "name": "portupal",
   "version": "1.0.0",
   "description": "Build fast, server-driven webapps on Cloudflare with SSR, RSC, and realtime. ",
   "main": "index.js",
