private packs and auth

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-WEBAUTHN_RP_ID=localhost
-AUTH_SECRET_KEY=your-development-secret-key
+BETTER_AUTH_SECRET=your-development-secret-key
+BETTER_AUTH_URL=http://localhost:5173
 # Optional: Enable Turnstile bot protection
 # TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
 
