--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
     "@prisma/client": "~6.8.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@react-spring/web": "^10.0.2",
-    "@simplewebauthn/browser": "^13.1.0",
-    "@simplewebauthn/server": "^13.1.1",
     "@tailwindcss/vite": "^4.1.13",
     "@use-gesture/react": "^10.3.1",
+    "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
