--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -23,22 +23,21 @@
   "observability": {
     "enabled": true
   },
-  "durable_objects": {
-    "bindings": [
-      {
-        "name": "SESSION_DURABLE_OBJECT",
-        "class_name": "SessionDurableObject"
-      }
-    ]
-  },
   "vars": {
     "WEBAUTHN_APP_NAME": "alfacinha",
-    "AI_GATEWAY_ID": "alfacinha"
+    "AI_GATEWAY_ID": "alfacinha",
+    "BETTER_AUTH_URL": "https://www.alfacinha.me"
   },
   "migrations": [
     {
       "tag": "v1",
       "new_sqlite_classes": [
+        "SessionDurableObject"
+      ]
+    },
+    {
+      "tag": "v2",
+      "deleted_classes": [
         "SessionDurableObject"
       ]
     }
