fix ai gateway name

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -25,7 +25,7 @@
   },
   "vars": {
     "WEBAUTHN_APP_NAME": "alfacinha",
-    "AI_GATEWAY_ID": "alfacinha",
+    "AI_GATEWAY_ID": "portupal",
     "BETTER_AUTH_URL": "https://www.alfacinha.me"
   },
   "migrations": [
